Add in html logo and headings and sections

--- a/index.html
+++ b/index.html
@@ -13,22 +13,31 @@
 </head>
 
 <body>
-    <h1 class="heading">
-        <img class="logo" src="assets/images/rock_paper_scissors_logo.png" alt="logo"> Rock Paper Scissors 
-    </h1>
+    <section class="intro">
+        <h1 class="heading">
+        <img class="logo" src="assets/images/rock_paper_scissors_logo (1).png" alt="logo"> Rock Paper Scissors 
+        </h1>
+        <h2>First To Win 5 Rounds is Champion!</h2>
+        <h3>Need to see the rules?</h3>
+        <button>Rules</button>
+    </section>
+    <section class="Game">
+        <div class="score-area">
 
-    <div class="game-area">
+        </div>
 
-    </div>
+         <div class="game-area">
 
-    <div class="score-area">
+        </div>
+    </section>
+    <section class="faq-section">
+         <div class="FAQ">
 
-    </div>
+        </div>
+    </section>
+    <section class="footer-section">
 
-    <div class="FAQ">
-
-    </div>
-
+    </section>
 
     <script src="assets/js/script.js"></script>
 </body>
