Add html score section

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+
     <section class="intro">
         <h1 class="heading">
         <img class="logo" src="assets/images/rock_paper_scissors_logo (1).png" alt="logo"> Rock Paper Scissors 
@@ -21,8 +22,19 @@
         <h3>Need to see the rules?</h3>
         <button>Rules</button>
     </section>
+
     <section class="Game">
         <div class="score-area">
+            <div class="score">
+                <div class="playerScore">
+                    <h2>Player</h2>
+                    <p class="p-count count">0</p>
+                </div>
+                <div class="computerScore">
+                    <h2>Computer</h2>
+                    <p class="c-count count">0</p>
+                </div>
+            </div>
 
         </div>
 
