Add html for game area

--- a/index.html
+++ b/index.html
@@ -35,11 +35,22 @@
                     <p class="c-count count">0</p>
                 </div>
             </div>
-
         </div>
 
          <div class="game-area">
+            <div class="move">Pick your move</div>
 
+            <div class="movesleft">Moves left:10</dive>
+
+            <div class="options">
+                <button class="rock">Rock</button>
+                <button class="paper">Paper</button>
+                <button class="scissors">Scissors</button>
+            </div>
+
+            <div class="result"></div>
+
+            <button class="reload"></button>
         </div>
     </section>
     <section class="faq-section">
