--- a/index.html
+++ b/index.html
@@ -54,12 +54,54 @@
         </div>
     </section>
     <section class="faq-section">
-         <div class="FAQ">
-
+        <div class="container">
+            <h2> Frequently Asked Questions</h2>
+            <div class="accordion">
+                <div class="accordion-item" id="question1">
+                    <a class="link" href="#question1">
+                        What are the shapes of Rock Paper Scissors?
+                    </a>
+                    <div class="answer">
+                        <p>The rock is when you place your hand into the form of a simple fist, The paper is when you place your hand in an outstretched position, This is when you hold your fist with your index and middle finger pointing outwards in a V shape.</p>
+                    </div>
+                </div>
+                <div class="accordion-item" id="question2">
+                    <a class="link" href="#question2">
+                        What are the basic rules of RPS?
+                    </a>
+                    <div class="answer">
+                        <p>Although the game has a lot of complexity to it, the rules to play it are pretty simple.
+                            The game is played where players deliver hand signals that will represent the elements of the game; rock, paper and scissors. The outcome of the game is determined by 3 simple rules:
+                            
+                            Rock wins against scissors.
+                            Scissors win against paper.
+                            Paper wins against rock.</p>
+                    </div>
+                </div>
+                <div class="accordion-item" id="question3">
+                    <a class="link" href="#question3">
+                        How do I win?
+                    </a>
+                    <div class="answer">
+                        <p>You are playing against the computer, the first to win 5 sets wins the game. You can track your score on screen.</p>
+                    </div>
+                </div>
+                <div class="accordion-item" id="question4">
+                    <a class="link" href="#question4">
+                        How many games can I play?
+                    </a>
+                    <div class="answer">
+                        <p>You can play as many games as you want against the computer, there is no limit!</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
     <section class="footer-section">
-
+        <h3>Rock Paper Scissors Game</h3>
+        <p> A free game that has settled many arguments throughout the ages</p>
+        <p> Ready to play again?</p>
+        <button> Return to top</button>
     </section>
 
     <script src="assets/js/script.js"></script>
